myproject/force-app/main/default/objects/Account/fields/anjali1__c.field-meta.xml
<CustomField>
    <fullName>anjali1__c</fullName>
    <label>anjali1</label>
    <length>24</length>
    <type>Text</type>
</CustomField>