myproject/force-app/main/default/objects/Account/fields/Mike_Demo__c.field-meta.xml
<CustomField>
    <fullName>Mike_Demo__c</fullName>
    <label>Mike Demo</label>
    <length>24</length>
    <type>Text</type>
</CustomField>