myproject/force-app/main/default/objects/Account/fields/Mike_w1__c.field-meta.xml
<CustomField>
    <fullName>Mike_w1__c</fullName>
    <label>Mike w1</label>
    <length>24</length>
    <type>Text</type>
</CustomField>