myproject/force-app/main/default/objects/Account/fields/Rucksack__c.field-meta.xml
<CustomField>
    <fullName>Rucksack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rucksack</label>
    <type>Checkbox</type>
</CustomField>