myproject/force-app/main/default/objects/Account/fields/TestDemo2__c.field-meta.xml
<CustomField>
    <fullName>TestDemo2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestDemo2</label>
    <type>Checkbox</type>
</CustomField>