myproject/force-app/main/default/objects/Account/fields/Testing_This__c.field-meta.xml
<CustomField>
    <fullName>Testing_This__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testing This?</label>
    <type>Checkbox</type>
</CustomField>