myproject/force-app/main/default/objects/Account/fields/The_Good_Field__c.field-meta.xml
<CustomField>
    <fullName>The_Good_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>The Good Field</label>
    <type>Checkbox</type>
</CustomField>