myproject/force-app/main/default/objects/Account/fields/VinodField__c.field-meta.xml
<CustomField>
    <fullName>VinodField__c</fullName>
    <label>VinodField</label>
    <length>44</length>
    <type>Text</type>
</CustomField>